scrollbar fixed.

--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@
 	padding: 0;
 	box-sizing: border-box;
 	font-family: "Inter", sans-serif;
+	scrollbar-gutter: stable;
 }
 ::selection {
 	background-color: #fff7dfe7;
